# UAT-Tool

./: .gitignore  CHOCO_VERIFICATION.txt  CMakeLists.txt  Cargo.toml  LICENSE.txt  README.md  install_uattool.ps1  main.cpp  uattool.nuspec
.github/workflows/: auto_build_master.yml  release.yml  rust.yml
src/: engine_utils.rs  main.rs  platform_utils.rs
