[package]
name = "uattool"
version = "1.0.0"
edition = "2021"

[dependencies]
anstream = "0.6.15"
clap = { version = "4.5.17", features = ["derive"] }
owo-colors = "4.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
winsafe = { version = "0.0.22", features = ["advapi", "kernel", "shell"] }
